# 2026course

./: .env_example  .gitattributes  .gitignore  .gitmodules  1.知識取得.md  2.課題の選定と分析.md  3.解決策の提案.md  CLAUDE.md  README.md  pyproject.toml
1回目/: uv-setup.md
1回目/src/myproject/: pyproject.toml
2回目/: README.md  part1-agent-intro.md  part2-tools.md  part3-langgraph.md  part4-langsmith.md  part5-review.md  plan.md  pyproject.toml
2回目/src/: fibonacci.py  main.py  part2.py  part3.py  part4.py
3回目/: .gitignore  README.md  pyproject.toml  requirements.txt
3回目/docs/: 1.ASR+LLM.md  10.further_improvement.txt  2.LoopPattern.md  3.Whisperx.md  4.Whisperx+CTC-ASR.md  5.Medical.md  6.Dictionary.md  7.RAG.md  8.multimodel.md  9.file2prompt.md  self_study.txt
3回目/notebooks/: colab.ipynb
3回目/slides/: slides.html  slides.md  slides.pptx
3回目/src/: 01_1_asr_basic.py  01_asr_basic.py  02_asr_llm.py  03_validation.py  04_accuracy.py  utils.py
１回目/: README.md  copilot-setup.md  github-setup.md
