[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "langchain>=1.2.15",
    "langchain-core>=1.2.29",
    "langchain-openai>=1.1.13",
    "openai>=2.31.0",
]

[tool.uv]
package = false